Naheulbeuk/Naheulbeuk.css
/* ... */
.sheet-rolltemplate-default caption {
	background-color: white;
	color: #766344;
	border: 1px solid black;
	font-weight: bold;
	text-align: center;
}
	.sheet-rolltemplate-default tr:nth-child(2n) {
		background-color: transparent;
	}
	.sheet-rolltemplate-default td:first-child {
		min-width: 1%;
		width: 1%;
		background: linear-gradient(to right,#c3996b7a,#fff);
		color: #766344;
		text-align: left;
		white-space: nowrap;
	}
	.sheet-rolltemplate-default td.sheet-td-noFirst {
		text-align:left!important;
		font-weight:normal!important;
		background: white!important;
	}

/* night mode */
input.sheet-nightMode:checked + .sheet-wrapper {
	background-color:#36393f;
	color:white;
}
	input.sheet-nightMode:checked + .sheet-wrapper h2,
	input.sheet-nightMode:checked + .sheet-wrapper span.sheet-tab,
	input.sheet-nightMode:checked + .sheet-wrapper input.sheet-display-pnj:checked + span,
	input.sheet-nightMode:checked + .sheet-wrapper .sheet-stats tbody th,
	input.sheet-nightMode:checked + .sheet-wrapper .sheet-hex,
	input.sheet-nightMode:checked + .sheet-wrapper .sheet-hex input,
	input.sheet-nightMode:checked + .sheet-wrapper span.sheet-rounded-tab,
	input.sheet-nightMode:checked + .sheet-wrapper .sheet-group,
	input.sheet-nightMode:checked + .sheet-wrapper .sheet-recette-filtre {
		background: #42464d;
	}
	input.sheet-nightMode:checked + .sheet-wrapper input.sheet-display-reglages:checked + span {
		color: black;
	}
	input.sheet-nightMode:checked + .sheet-wrapper span.sheet-rounded-tab {
		color:white;
	}
	input.sheet-nightMode:checked + .sheet-wrapper input.sheet-autoCalc {
		background-color: lightslategray;
	}

	input.sheet-nightMode:checked + .sheet-wrapper span.sheet-display-pnj,
	input.sheet-nightMode:checked + .sheet-wrapper input.sheet-tab:checked + span,
	input.sheet-nightMode:checked + .sheet-wrapper input.sheet-rounded-tab:checked + span,
	input.sheet-nightMode:checked + .sheet-wrapper div.sheet-modal {
		background: #6a6a6a;
	}
	input.sheet-nightMode:checked + .sheet-wrapper input[type="number"],
	input.sheet-nightMode:checked + .sheet-wrapper input[type="text"],
	input.sheet-nightMode:checked + .sheet-wrapper select {
		background-color: #36393f;
		color: white;
		border: 1px solid black;
	}
	input.sheet-nightMode:checked + .sheet-wrapper input[type="text"].sheet-noBorder {
		background-color: #36393f;
		color: white;
		border: 0px none;
		border-bottom: 1px solid black;
	}
	input.sheet-nightMode:checked + .sheet-wrapper .sheet-competences div.sheet-noRoll {
		color: black;
	}

/* grid */
.sheet-row {
  position: relative;
  width: 100%;
}
.sheet-row [class^="sheet-col"] {
  float: left;
  margin: 0 0 0 1%;
  min-height: 0.125rem;
}
.sheet-row::after {
	content: "";
	display: table;
	clear: both;
}

.sheet-col-1 {
	width: 7.33%;
}
.sheet-col-2 {
	width: 15.66%;
}
.sheet-col-3 {
	width: 24%;
}
.sheet-col-4 {
	width: 32.33%;
}
.sheet-col-5 {
	width: 40.66%;
}
.sheet-col-6 {
	width: 49%;
}
.sheet-col-7 {
	width: 57.33%;
}
.sheet-col-8 {
	width: 65.66%;
}
.sheet-col-9 {
	width: 74%;
}
.sheet-col-10 {
	width: 81.33%;
}
.sheet-col-11 {
	width: 89.66%;
}
.sheet-col-12 {
	width: 98%;
}

